--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,8 @@ body {
     padding: 2rem;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+.ob-value{
+    font-size: 18px;
+    
+}
