--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         </p>
     </div>
     <div class="p-col-9">
-        <p-card header="Patient" [style]="{'width': '25rem', 'margin-bottom': '2em'}">
+        <p-card header="Patient" [style]="{'width': '40rem', 'margin-bottom': '2em'}">
             <p>
                 Name: <b>{{ PatientName(patient?.name) }}</b>
             </p>
@@ -23,17 +23,26 @@
                 Deceased: <b>{{ patient?.deceasedDateTime }}</b>
             </p>    
         </p-card>
-        <p-card header="Address" [style]="{'width': '25rem', 'margin-bottom': '2em'}">
+        <p-card header="Address" [style]="{'width': '40rem', 'margin-bottom': '2em'}">
             {{ patient?.address[0].line }}<br>
             {{ patient?.address[0].city }}, {{ patient?.address[0].state }} {{ patient?.address[0].postalCode }}
         </p-card>
-        <p-card header="Blood Pressure" [style]="{'width': '25rem', 'margin-bottom': '2em'}">
-            Systolic: {{sys}}<br>
-            Diastolic: {{dia}}
+        <p-card header="Blood Pressure" [style]="{'width': '40rem', 'margin-bottom': '2em'}">
+            <ul style="margin: 0px;">
+                <li>Systolic: {{sys}}</li>
+                <li>Diastolic: {{dia}}</li>
+            </ul>
         </p-card>
-        <p-card *ngIf="ldl || hdl" header="Cholesterol" [style]="{'width': '25rem', 'margin-bottom': '2em'}">
-            LDL: {{ldl}}<br>
-            HDL: {{hdl}}
+        <p-card *ngIf="ldl || hdl" header="Cholesterol" [style]="{'width': '40rem', 'margin-bottom': '2em'}">
+            <ul style="margin: 0px;">
+                <li>LDL: {{ldl}}</li>
+                <li>HDL: {{hdl}}</li>
+            </ul>
+        </p-card>
+        <p-card header="Medication Requests" [style]="{'width': '40rem', 'margin-bottom': '2em'}">
+            <ul style="margin: 0px;">
+                <li *ngFor="let med of meds">{{med}}</li>
+            </ul>
         </p-card>
     </div>
 </div>
